# rpmalloc

./: .clang-format  .gitattributes  .gitignore  BENCHMARKS.md  CACHE.md  CHANGELOG  CMakeLists.txt  CmakeSettings.json  LICENSE  README.md  configure.py  rpmalloc.h  runall.bat  runall.sh
.github/: CMakeLists.root  CMakeLists.test  FUNDING.yml
.github/workflows/: ci.yml  ci_centos.yml  ci_cpu.yml
LICENSES/: MIT.txt
benchmark/: README.md  benchmark.h  main.c  plot.py
benchmark/crt/: benchmark.c
benchmark/gperftools/: benchmark.c
benchmark/gperftools/src/: heap-checker.cc  tcmalloc.cc  tcmalloc.h  thread_cache.h
benchmark/gperftools/src/base/: low_level_alloc.cc  spinlock.cc
benchmark/gperftools/src/linux/: config.h
benchmark/gperftools/src/macosx/: config.h
benchmark/gperftools/src/windows/: config.h  override_functions.cc  port.cc  port.h
benchmark/hoard/: AUTHORS  NEWS  README.md  THANKS  benchmark.c
benchmark/hoard/Heap-Layers/: README.md  TODO  heaplayers  heaplayers.h
benchmark/hoard/Heap-Layers/examples/kingsley/: compile  libkingsley.cpp
benchmark/hoard/Heap-Layers/heaps/: README  all.h
benchmark/hoard/Heap-Layers/heaps/buildingblock/: adaptheap.h  all.h  boundedfreelistheap.h  chunkheap.h  coalesceheap.h  freelistheap.h
benchmark/hoard/Heap-Layers/heaps/combining/: all.h  hybridheap.h  segheap.h  strictsegheap.h  tryheap.h
benchmark/hoard/Heap-Layers/heaps/debug/: all.h  checkheap.h  debugheap.h  logheap.h  sanitycheckheap.h  statsheap.h
benchmark/hoard/Heap-Layers/heaps/general/: all.h  dlheap.h  kingsleyheap.h  leamallocheap.h  oldkingsleyheap.h
benchmark/hoard/Heap-Layers/heaps/objectrep/: addheap.h  all.h  coalesceableheap.h  sizeheap.h  sizeownerheap.h
benchmark/hoard/Heap-Layers/heaps/special/: all.h  bumpalloc.h  nestedheap.h  obstack.h  obstackheap.h  obstackreap.h  sbrk.c  xallocheap.h  zoneheap.h
benchmark/hoard/Heap-Layers/heaps/threads/: all.h  lockedheap.h  phothreadheap.h  sizethreadheap.h  threadheap.h  threadspecificheap.h
benchmark/hoard/Heap-Layers/heaps/top/: all.h  mallocheap.h  mmapheap.h  staticheap.h
benchmark/hoard/Heap-Layers/heaps/utility/: all.h  exactlyoneheap.h  exceptionheap.h  localmallocheap.h  nullheap.h  oneheap.h  perclassheap.h  profileheap.h  slopheap.h  traceheap.h  uniqueheap.h
benchmark/hoard/Heap-Layers/heaps/utility/old/: oneheap.h
benchmark/hoard/Heap-Layers/locks/: all.h  maclock.h  oldspinlock.h  posixlock.h  recursivelock.h  spinlock-old.h  spinlock.h  winlock.h
benchmark/hoard/Heap-Layers/threads/: all.h  cpuinfo.cpp  cpuinfo.h  fred.h
benchmark/hoard/Heap-Layers/utility/: a.out  align.h  all.h  bins.h  bins16k.h  bins4k.h  bins64k.h  bins8k.h  checkpoweroftwo.h  dllist.h  dynarray.h  exactlyone.h  freesllist.h  gcd.h  guard.h  hash.h  ilog2.cpp  ilog2.h  istrue.h  lcm.h  modulo.h  myhashmap.h  sassert.h  singleton.h  sllist.h  testalign.cpp  timer-old.h  timer.h
benchmark/hoard/Heap-Layers/wrappers/: all.h  ansiwrapper.h  gnuwrapper-hooks.cpp  gnuwrapper.cpp  macinterpose.h  macwrapper.cpp  mallocinfo.h  mmapwrapper.h  stlallocator.h  winwrapper.cpp  wrapper.cpp  x86jump.h
benchmark/hoard/Heap-Layers/wrappers/arch-specific/: sparc-interchange.il  x86-interchange.il  x86_64-interchange.il
benchmark/hoard/include/: README  VERSION.h
benchmark/hoard/include/hoard/: README  basehoardmanager.h  debugprint.h  emptyclass.h  emptyhoardmanager.h  geometricsizeclass.cpp  geometricsizeclass.h  globalheap.h  heapmanager.h  hoardconstants.h  hoardheap.h  hoardmanager.h  hoardsuperblock.h  hoardsuperblockheader.h  hoardtlab.h  processheap.h  redirectfree.h  statistics.h  thresholdheap.h  thresholdsegheap.h
benchmark/hoard/include/superblocks/: addheaderheap.h  alignedsuperblockheap.h  ignoreinvalidfree.h  manageonesuperblock.h  tlab.h
benchmark/hoard/include/util/: alignedmmap.h  array.h  bumpalloc.h  check.h  conformantheap.h  dynamichashtable.cpp  dynamichashtable.h  fixedrequestheap.h  lockmallocheap.h  mmapalloc.h  releaseheap.h  threadpoolheap.h
benchmark/hoard/source/: libhoard.cpp  mactls.cpp  unixtls.cpp  uselibhoard.cpp  wintls.cpp
benchmark/nedmalloc/: !GenCHM.bat  Readme.html  benchmark.c  malloc.c.h  nedmalloc.c  nedmalloc.h  scalingtest.cpp  usermodepageallocator.c  winpatcher.c
benchmark/ptmalloc3/: benchmark.c  malloc-private.h  malloc.c  ptmalloc3.c
benchmark/ptmalloc3/sysdeps/generic/: malloc-machine.h
benchmark/ptmalloc3/sysdeps/pthread/: malloc-machine.h
benchmark/ptmalloc3/sysdeps/windows/: malloc-machine.h
benchmark/results/: mimalloc-bench-allt.csv  rptest-threads.csv
benchmark/rpmalloc/: benchmark.c
cmake/: rpmallocConfig.cmake  rpmalloc_config.h.in  rpmalloc_config_private.h.in
msvs/: benchmark-crt.vcxproj  benchmark-hoard.vcxproj  benchmark-hoard.vcxproj.filters  benchmark-nedmalloc.vcxproj  benchmark-ptmalloc3.vcxproj  benchmark-ptmalloc3.vcxproj.filters  benchmark-random-small.txt  benchmark-rpmalloc.vcxproj  benchmark-tcmalloc.vcxproj  rpmalloc.vcxproj
ninja/: android.py  clang.py  codesign.py  gcc.py  generator.py  plist.py  syntax.py  toolchain.py  version.py
rpmalloc/: malloc.c  new.cc  rpmalloc-new.c  rpmalloc.c  rpmalloc.h  rpnew.h
test/: CMakeLists.txt  atomic.h  bug.cc  init-race.c  init-race.sh  main-override.cc  main.c  storage.c  stress.c  stress.sh  test.h  thread.c  thread.h  timer.c  timer.h  tsan-suppressions.txt
test/main/: CMakeLists.txt  main.c
test/override/: CMakeLists.txt
